infra/k8s/Proxy/proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proxy-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: proxy
  template:
    metadata:
      labels:
        app: proxy
    spec:
      containers:
        - name: proxy
          image: ron1111000/proxy:latest
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
