infra/k8s/Proxy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxy-srv
spec:
  selector:
    app: proxy
  type: ClusterIP
  ports:
    - name: proxy
      protocol: TCP
      port: 5000
      targetPort: 5000
